# llm-api-card-price

./: .env.example  .gitignore  CLAUDE.md  README.md  pricing.toml  pyproject.toml  rules.toml
docs/plans/: 2026-03-01-auto-pricing-updater-design.md  2026-03-01-auto-pricing-updater.md
scripts/: com.llm-pricing.updater.plist  install-launchd.sh  install-systemd.sh  llm-pricing-updater.service  llm-pricing-updater.timer  uninstall-launchd.sh  uninstall-systemd.sh
src/llm_pricing/: __init__.py  config.py  filter.py  main.py  notifier.py  parser.py  scraper.py  updater.py
tests/: test_config.py  test_main.py  test_notifier.py  test_parser.py  test_scraper.py  test_updater.py
