[project]
name = "llm-pricing"
version = "0.1.0"
description = "Automated LLM API pricing tracker"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
    "anthropic>=0.42",
    "tomli>=2.0",
    "tomli-w>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
llm-pricing = "llm_pricing.main:main"
